fixed search input width on mobile

--- a/web/cobrands/popravito/base.scss
+++ b/web/cobrands/popravito/base.scss
@@ -182,6 +182,10 @@ label[for="message"]{
     margin: 2rem 1.5rem 0 1.5rem;
 }
 
+.search-input {
+    width: 100%;
+}
+
 .search-input::placeholder {
     font-size: 1rem;
 }
