--- a/web/cobrands/popravito/layout.scss
+++ b/web/cobrands/popravito/layout.scss
@@ -97,10 +97,6 @@ $primary: url('/cobrands/popravito/images/hero-desktop.svg') no-repeat right;
     max-width: 540px;
 }
 
-.search-input {
-    width: 100%;
-}
-
 .mobile-hero-images {
     padding-top: 0;
 }
